[package]
name = "rocket-client-addr"
version = "0.5.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rocket-client-addr"
homepage = "https://magiclen.org/rocket-client-addr"
keywords = ["rocket", "server", "web", "ip", "http"]
categories = ["web-programming"]
description = "This crate provides two request guards used for getting an IP address from a client."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = { version = "0.5.0-rc.1" }

